[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/game-brick_wall-800x600.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/title.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=3]
[ext_resource path="res://sounds/music/Komiku - End of the trip.wav" type="AudioStream" id=4]
[ext_resource path="res://fonts/TerminusTTF-Bold-4.47.0.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/GWJ_logo_white_transparent.png" type="Texture" id=9]
[ext_resource path="res://fonts/TheEndFont(RF).ttf" type="DynamicFontData" id=10]
[ext_resource path="res://images/WeeklyGameJam_ white_logo.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 47
font_data = ExtResource( 10 )

[node name="game_over" type="Node"]
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" parent="." instance=ExtResource( 2 )]

[node name="ending_text" type="Label" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 784.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "You got: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thanks" type="Label" parent="."]
margin_left = 16.0
margin_top = 208.0
margin_right = 784.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "Thanks for playing!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logos" type="Control" parent="."]
margin_left = 16.0
margin_top = 424.0
margin_right = 526.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="logos"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "Made as a part of:"

[node name="GWJ" type="TextureRect" parent="logos"]
modulate = Color( 0.878431, 0.282353, 0.368627, 1 )
margin_top = 24.0
margin_right = 216.0
margin_bottom = 160.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weeklygame" type="TextureRect" parent="logos"]
modulate = Color( 0.878431, 0.282353, 0.368627, 1 )
margin_left = 232.0
margin_top = 24.0
margin_right = 343.0
margin_bottom = 160.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wildcards" type="Label" parent="logos"]
margin_left = 352.0
margin_right = 491.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "Wildcards used:

+ Wherefore Art Thou?
+ Seamless"
autowrap = true

[node name="credits" type="Button" parent="."]
margin_left = 585.0
margin_top = 424.0
margin_right = 784.0
margin_bottom = 503.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "CREDITS"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return" type="Button" parent="."]
margin_left = 506.951
margin_top = 503.0
margin_right = 784.0
margin_bottom = 586.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "Play Again?"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
